fixed overflow content in archive

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -115,6 +115,8 @@ nav.pagination #next { right: 20px; }
   margin: auto;
   padding-bottom: 8px;
   border: solid gray 1px;
+  height: 76px;
+  overflow: hidden;
 }
 
 ul {
